<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logintLayout"
    style="@style/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space2"
                android:layout_marginRight="@dimen/space2"
                android:contentDescription="@string/empty"
                android:layout_gravity="center_vertical"
                android:src="@drawable/envelope" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/space3"
                android:paddingBottom="@dimen/space3"
                android:maxLines="1"
                android:singleLine="true"
                 />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_lighter" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space2"
                android:layout_marginRight="@dimen/space2"
                android:contentDescription="@string/empty"
                android:src="@drawable/lock_closed" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:paddingTop="@dimen/space3"
                android:paddingBottom="@dimen/space3"
                android:maxLines="1"
                android:singleLine="true"
                 />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/forgotYourPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/link_forgot_your_password"
        android:textColor="@color/turquoise" />

    <Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/space4"
        android:text="@string/login_button_label" />

</LinearLayout>