<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    android:padding="@dimen/space4"
    tools:context=".LoginActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/courts_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcome_bottom_layout"
        android:layout_alignRight="@+id/welcome_bottom_layout"
         />

    <LinearLayout
        android:id="@+id/welcome_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/pager_dots_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/empty"
            android:src="@drawable/three_dots_first_selected" />
        
        <Space 
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space7"
            />

        <Button
            android:id="@+id/welcom_login_button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textSize="@dimen/text_h3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space2" />

        <Button
            android:id="@+id/welcom_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_grey"
            android:text="@string/label_create_an_account"
            android:textSize="@dimen/text_h3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space2" />

        <TextView
            android:id="@+id/disclaimer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_welcome_disclaimer"
            android:textSize="@dimen/text_h6" />
    </LinearLayout>

</RelativeLayout>