<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/tennis_raquets_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/empty"
        android:padding="@dimen/space3"
        android:scaleType="fitCenter"
        android:src="@drawable/welcome_hit_the_courts" />

    <TextView
        android:id="@+id/create_an_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_hit_the_courts"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_h4"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/space4"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/welcome_onborad_description_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/label_welcome_this_is_it"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_h5" />
    </LinearLayout>

</LinearLayout>